# jacobi_pd

include/: CMakeLists.txt  jacobi_pd.hpp  main.cpp
